# poetry-multistage-docker

./: .dockerignore  LICENCE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
docker-alt/: Dockerfile
my_package/: __init__.py  main.py
scripts/: build-dev.sh  build-prod.sh  run-dev.sh  run.sh  test.sh
tests/: test_main.py
